--- a/package.json
+++ b/package.json
@@ -1,15 +1,37 @@
 {
-  "name": "flight-booking-ui",
+  "name": "flight-booking-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.15.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.20.0",
+    "base-64": "^1.0.0",
+    "bootstrap": "^5.1.3",
+    "file-saver": "^2.0.2",
+    "material-table": "^1.69.0",
+    "material-ui": "^0.20.2",
+    "moment": "^2.29.1",
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.6.4",
+    "react-dom": "^16.13.1",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.1.21",
+    "react-numeric-input": "^2.2.3",
+    "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.3",
+    "react-select": "^5.2.1",
+    "react-select-me": "^1.3.2",
+    "redux": "^4.0.5",
+    "redux-form": "^8.3.6",
+    "redux-form-material-ui": "^4.3.4",
+    "redux-thunk": "^2.3.0",
+    "utf8": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -18,10 +40,7 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": "react-app"
   },
   "browserslist": {
     "production": [
