--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "base-64": "^1.0.0",
     "bootstrap": "^5.1.3",
     "file-saver": "^2.0.2",
+    "jspdf": "^2.5.0",
+    "jspdf-autotable": "^3.5.23",
     "material-table": "^1.69.0",
     "material-ui": "^0.20.2",
     "moment": "^2.29.1",
